--- a/page_principales.html
+++ b/page_principales.html
@@ -12,13 +12,13 @@
         <p>Développeur Informatique | Analyste de Données</p>
         <nav>
             <ul>
-                <li><a class="active" href="page_principale.html">Accueil</a></li>
+                <li><a class="active" href="page_principales.html">Accueil</a></li>
                 <li><a href="projets.html">Projets</a></li>
                 <li><a href="#experience">Expérience</a></li>
                 <li><a href="#education">Formation</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#contact-details">Contact</a></li>
-                <li><a href="connexion.html">Connexion</a></li>
+                <li><a href="index.html">Connexion</a></li>
             </ul>
         </nav>
     </header>
