--- a/projets.html
+++ b/projets.html
@@ -12,12 +12,12 @@
         <p>Développeur Informatique | Analyste de Données</p>
         <nav>
             <ul>
-                <li><a href="page_principale.html">Accueil</a></li>
+                <li><a href="page_principales.html">Accueil</a></li>
                 <li><a href="projets.html">Projets</a></li>
                 <li><a href="#experience">Expérience</a></li>
                 <li><a href="#education">Formation</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="connexion.html">Connexion</a></li>
+                <li><a href="index.html">Connexion</a></li>
             </ul>
         </nav>
     </header>
