--- a/projets.html
+++ b/projets.html
@@ -31,23 +31,35 @@
             <p>Création d'un site web pour une boutique en ligne avec des fonctionnalités de panier d'achat, paiement sécurisé, et gestion des produits.</p>
             <a href="https://github.com/yaya24Bah/Projet_Yaya2024.git" target="_blank">Voir le projet sur GitHub</a>
         </article>
+        
+        <article>
+            <h3>Projet 2: Application de recettes de cuisine</h3>
+                <p> <strong> Description :</strong> Un site web ou une application où les utilisateurs peuvent 
+                     rechercher, publier et commenter des recettes de cuisine.
+                    <strong>Technologies :</strong> HTML, CSS, JavaScript, Node.js, Express, MongoDB.<br>
+                    <strong>Fonctionnalités :</strong> Recherche de recettes, ajout et modification de recettes,
+                     commentaires, système de notation, authentification des utilisateurs.</p>
+        
+                  <p><a href="https://yaya24bah.github.io/Recette_App/" target="_blank">Voir le projet sur GitHub</a>
+                </p>
+        </article>
 
         <article>
-            <h3>Projet 2 : Développement web avec interface de connexion</h3>
+            <h3>Projet 3 : Développement web avec interface de connexion</h3>
             <p><strong>Technologies utilisées :</strong> Python, Flask</p>
             <p>Développement d'une application web avec une interface de connexion permettant l'envoi de courriels, l'ajout et la suppression d'utilisateurs, ainsi que la possibilité de liker des posts.</p>
             <a href="https://github.com/yaya24Bah/Projets_Developpement_web.git" target="_blank">Voir le projet sur GitHub</a>
         </article>
 
         <article>
-            <h3>Projet 3 : Analyse des données de l'accéléromètre</h3>
+            <h3>Projet 4 : Analyse des données de l'accéléromètre</h3>
             <p><strong>Technologies utilisées :</strong> Python, Pandas, Scikit-learn</p>
             <p>Analyse des données recueillies à partir d’un accéléromètre portable monté sur la poitrine de 15 participants effectuant 7 activités. Le projet vise à la reconnaissance des activités et à l'authentification des personnes à l’aide de modèles de mouvement.</p>
             <a href="https://github.com/yaya24Bah/Annalyse-de-donnees_Accellometre.git" target="_blank">Voir le projet sur GitHub</a>
         </article>
 
         <article>
-            <h3>Projet 4 : Gestion de base de données</h3>
+            <h3>Projet 5 : Gestion de base de données</h3>
             <p><strong>Technologies utilisées :</strong> SQL, PostgreSQL</p>
             <p>Développement et gestion de bases de données, y compris la création de schémas, la gestion des utilisateurs et des permissions, ainsi que l'optimisation des requêtes pour des performances accrues.</p>
             <a href="https://github.com/yaya24Bah/Base_de_donnees_SQL.git" target="_blank">Voir le projet sur GitHub</a>
